; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_CharToNetBiosStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_CharToNetBiosStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"AA\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"EB\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"EC\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"ED\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"EE\00", align 1
@.str.5 = private unnamed_addr constant [3 x i8] c"EF\00", align 1
@.str.6 = private unnamed_addr constant [3 x i8] c"EG\00", align 1
@.str.7 = private unnamed_addr constant [3 x i8] c"EH\00", align 1
@.str.8 = private unnamed_addr constant [3 x i8] c"EI\00", align 1
@.str.9 = private unnamed_addr constant [3 x i8] c"EJ\00", align 1
@.str.10 = private unnamed_addr constant [3 x i8] c"EK\00", align 1
@.str.11 = private unnamed_addr constant [3 x i8] c"EL\00", align 1
@.str.12 = private unnamed_addr constant [3 x i8] c"EM\00", align 1
@.str.13 = private unnamed_addr constant [3 x i8] c"EN\00", align 1
@.str.14 = private unnamed_addr constant [3 x i8] c"EO\00", align 1
@.str.15 = private unnamed_addr constant [3 x i8] c"EP\00", align 1
@.str.16 = private unnamed_addr constant [3 x i8] c"FA\00", align 1
@.str.17 = private unnamed_addr constant [3 x i8] c"FB\00", align 1
@.str.18 = private unnamed_addr constant [3 x i8] c"FC\00", align 1
@.str.19 = private unnamed_addr constant [3 x i8] c"FD\00", align 1
@.str.20 = private unnamed_addr constant [3 x i8] c"FE\00", align 1
@.str.21 = private unnamed_addr constant [3 x i8] c"FF\00", align 1
@.str.22 = private unnamed_addr constant [3 x i8] c"FG\00", align 1
@.str.23 = private unnamed_addr constant [3 x i8] c"FH\00", align 1
@.str.24 = private unnamed_addr constant [3 x i8] c"FI\00", align 1
@.str.25 = private unnamed_addr constant [3 x i8] c"FJ\00", align 1
@.str.26 = private unnamed_addr constant [3 x i8] c"FK\00", align 1
@.str.27 = private unnamed_addr constant [3 x i8] c"DA\00", align 1
@.str.28 = private unnamed_addr constant [3 x i8] c"DB\00", align 1
@.str.29 = private unnamed_addr constant [3 x i8] c"DC\00", align 1
@.str.30 = private unnamed_addr constant [3 x i8] c"DD\00", align 1
@.str.31 = private unnamed_addr constant [3 x i8] c"DE\00", align 1
@.str.32 = private unnamed_addr constant [3 x i8] c"DF\00", align 1
@.str.33 = private unnamed_addr constant [3 x i8] c"DG\00", align 1
@.str.34 = private unnamed_addr constant [3 x i8] c"DH\00", align 1
@.str.35 = private unnamed_addr constant [3 x i8] c"DI\00", align 1
@.str.36 = private unnamed_addr constant [3 x i8] c"DJ\00", align 1
@.str.37 = private unnamed_addr constant [3 x i8] c"CA\00", align 1
@.str.38 = private unnamed_addr constant [3 x i8] c"CB\00", align 1
@.str.39 = private unnamed_addr constant [3 x i8] c"CC\00", align 1
@.str.40 = private unnamed_addr constant [3 x i8] c"CD\00", align 1
@.str.41 = private unnamed_addr constant [3 x i8] c"CE\00", align 1
@.str.42 = private unnamed_addr constant [3 x i8] c"CF\00", align 1
@.str.43 = private unnamed_addr constant [3 x i8] c"CG\00", align 1
@.str.44 = private unnamed_addr constant [3 x i8] c"CH\00", align 1
@.str.45 = private unnamed_addr constant [3 x i8] c"CI\00", align 1
@.str.46 = private unnamed_addr constant [3 x i8] c"CJ\00", align 1
@.str.47 = private unnamed_addr constant [3 x i8] c"CK\00", align 1
@.str.48 = private unnamed_addr constant [3 x i8] c"CL\00", align 1
@.str.49 = private unnamed_addr constant [3 x i8] c"CM\00", align 1
@.str.50 = private unnamed_addr constant [3 x i8] c"CN\00", align 1
@.str.51 = private unnamed_addr constant [3 x i8] c"CO\00", align 1
@.str.52 = private unnamed_addr constant [3 x i8] c"DN\00", align 1
@.str.53 = private unnamed_addr constant [3 x i8] c"DK\00", align 1
@.str.54 = private unnamed_addr constant [3 x i8] c"DL\00", align 1
@.str.55 = private unnamed_addr constant [3 x i8] c"EA\00", align 1
@.str.56 = private unnamed_addr constant [3 x i8] c"FO\00", align 1
@.str.57 = private unnamed_addr constant [3 x i8] c"FP\00", align 1
@.str.58 = private unnamed_addr constant [3 x i8] c"HL\00", align 1
@.str.59 = private unnamed_addr constant [3 x i8] c"HN\00", align 1
@.str.60 = private unnamed_addr constant [3 x i8] c"HO\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @CharToNetBiosStr(i8 signext %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = call signext i8 @ToUpper(i8 signext %4)
  store i8 %5, i8* %3, align 1
  %6 = load i8, i8* %3, align 1
  %7 = sext i8 %6 to i32
  switch i32 %7, label %69 [
    i32 0, label %8
    i32 65, label %9
    i32 66, label %10
    i32 67, label %11
    i32 68, label %12
    i32 69, label %13
    i32 70, label %14
    i32 71, label %15
    i32 72, label %16
    i32 73, label %17
    i32 74, label %18
    i32 75, label %19
    i32 76, label %20
    i32 77, label %21
    i32 78, label %22
    i32 79, label %23
    i32 80, label %24
    i32 81, label %25
    i32 82, label %26
    i32 83, label %27
    i32 84, label %28
    i32 85, label %29
    i32 86, label %30
    i32 87, label %31
    i32 88, label %32
    i32 89, label %33
    i32 90, label %34
    i32 48, label %35
    i32 49, label %36
    i32 50, label %37
    i32 51, label %38
    i32 52, label %39
    i32 53, label %40
    i32 54, label %41
    i32 55, label %42
    i32 56, label %43
    i32 57, label %44
    i32 32, label %45
    i32 33, label %46
    i32 34, label %47
    i32 35, label %48
    i32 36, label %49
    i32 37, label %50
    i32 38, label %51
    i32 39, label %52
    i32 40, label %53
    i32 41, label %54
    i32 42, label %55
    i32 43, label %56
    i32 44, label %57
    i32 45, label %58
    i32 46, label %59
    i32 61, label %60
    i32 58, label %61
    i32 59, label %62
    i32 64, label %63
    i32 94, label %64
    i32 95, label %65
    i32 123, label %66
    i32 125, label %67
    i32 126, label %68
  ]

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %70

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %70

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %70

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %70

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %70

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %70

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %70

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %70

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %70

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %70

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %70

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %70

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %70

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %70

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %70

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %70

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %70

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %70

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %70

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %70

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %70

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %70

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %70

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %70

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %70

33:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %70

34:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.26, i64 0, i64 0), i8** %2, align 8
  br label %70

35:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.27, i64 0, i64 0), i8** %2, align 8
  br label %70

36:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.28, i64 0, i64 0), i8** %2, align 8
  br label %70

37:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.29, i64 0, i64 0), i8** %2, align 8
  br label %70

38:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.30, i64 0, i64 0), i8** %2, align 8
  br label %70

39:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.31, i64 0, i64 0), i8** %2, align 8
  br label %70

40:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.32, i64 0, i64 0), i8** %2, align 8
  br label %70

41:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.33, i64 0, i64 0), i8** %2, align 8
  br label %70

42:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.34, i64 0, i64 0), i8** %2, align 8
  br label %70

43:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %70

44:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.36, i64 0, i64 0), i8** %2, align 8
  br label %70

45:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.37, i64 0, i64 0), i8** %2, align 8
  br label %70

46:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.38, i64 0, i64 0), i8** %2, align 8
  br label %70

47:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.39, i64 0, i64 0), i8** %2, align 8
  br label %70

48:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.40, i64 0, i64 0), i8** %2, align 8
  br label %70

49:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.41, i64 0, i64 0), i8** %2, align 8
  br label %70

50:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.42, i64 0, i64 0), i8** %2, align 8
  br label %70

51:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.43, i64 0, i64 0), i8** %2, align 8
  br label %70

52:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.44, i64 0, i64 0), i8** %2, align 8
  br label %70

53:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.45, i64 0, i64 0), i8** %2, align 8
  br label %70

54:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.46, i64 0, i64 0), i8** %2, align 8
  br label %70

55:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.47, i64 0, i64 0), i8** %2, align 8
  br label %70

56:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.48, i64 0, i64 0), i8** %2, align 8
  br label %70

57:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.49, i64 0, i64 0), i8** %2, align 8
  br label %70

58:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.50, i64 0, i64 0), i8** %2, align 8
  br label %70

59:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.51, i64 0, i64 0), i8** %2, align 8
  br label %70

60:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.52, i64 0, i64 0), i8** %2, align 8
  br label %70

61:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.53, i64 0, i64 0), i8** %2, align 8
  br label %70

62:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.54, i64 0, i64 0), i8** %2, align 8
  br label %70

63:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.55, i64 0, i64 0), i8** %2, align 8
  br label %70

64:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.56, i64 0, i64 0), i8** %2, align 8
  br label %70

65:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.57, i64 0, i64 0), i8** %2, align 8
  br label %70

66:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.58, i64 0, i64 0), i8** %2, align 8
  br label %70

67:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.59, i64 0, i64 0), i8** %2, align 8
  br label %70

68:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.60, i64 0, i64 0), i8** %2, align 8
  br label %70

69:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.37, i64 0, i64 0), i8** %2, align 8
  br label %70

70:                                               ; preds = %69, %68, %67, %66, %65, %64, %63, %62, %61, %60, %59, %58, %57, %56, %55, %54, %53, %52, %51, %50, %49, %48, %47, %46, %45, %44, %43, %42, %41, %40, %39, %38, %37, %36, %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8
  %71 = load i8*, i8** %2, align 8
  ret i8* %71
}

declare dso_local signext i8 @ToUpper(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
